@@ -1,4 +1,6 @@
 DIST Path-Class-0.16.tar.gz 17340 RMD160 934d92f254c74046a0c6aeb3d2207da3cd86b1d4 SHA1 a28bea2ef56f0a7a9f7e82f0021a1bb24adeff6f SHA256 ec9903c18a782e2d4245421e58f618fa0c6b1ec2ad6acdb823a84a54e4ec3a7e
+DIST Path-Class-0.17.tar.gz 18744 RMD160 3d4d09426d103840bd4e3d6ee44e906e7b92bf76 SHA1 e1a8b7df1da11357ab3d335e7a40eaf444bcfde6 SHA256 b53dac9d8d51edcca1b8bc6a052fd4412ef363a647bda78a64305c339fb5b0d1
 EBUILD Path-Class-0.16.ebuild 582 RMD160 eabaad2a4a4cd6bc6e41f122532428cd80262215 SHA1 f6828c8706a2c248c1ffa7c004a29626843b1ede SHA256 e4610f5209e47bbd41d6e0ee37f899d0ecaedc2dd933b10408bc12d21f618d49
-MISC ChangeLog 1436 RMD160 bf2cd5b3e2aea0084417bf466842c26033fc915e SHA1 049a9bc2160f85fe8674c997681a3d49ae21a6db SHA256 a03bdfda4ea698b99a24da98bbf0a122a209316e76cc24a4ce9d105271904be0
+EBUILD Path-Class-0.17.ebuild 559 RMD160 4610c3fd97f1d685f269be1b637e5772c180ce12 SHA1 fab81e8786771a450e59be974aa0cce275fbaacf SHA256 d58c224951ef5afe073a06852a73258e323e5d5d74a90203425a3f5ffcbceb80
+MISC ChangeLog 1557 RMD160 3154abc3a4ea716d3c22773863b56eeeabaa53e0 SHA1 c05259219646a897e88c2df1366e016ff23287bf SHA256 497cae9d9a4446efc200017cf9f78ef6ce1a7c87f737735a1476cef1759f68a4
 MISC metadata.xml 159 RMD160 312f9ce05a5e6d5b2ae2dd53bf0371d80bb33a7f SHA1 ed741bf99f00660c2cfca56bcd1241336ad47fd7 SHA256 9e7c719a784bb48388c9a12217b85baa75f1b04e9bf049d74b740785fa5006dd
